tests/rascal/negative/type_errors/L1/12_expression_ES10_D4_61.ob
MODULE Test12;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (- 1);
  (* error *)  z := 200;
               q := p;
               x := 1223;
               z := (z - 200);
               z := ((- 1) + (- ((2 + 0) + z)));
               x := (- (- y));
               p := (1 < (- 200));
               x := y;
               z := 1223
END Test12.